@@ -705,7 +705,7 @@ sub verify_desktop_file {
     # tags are present.
     if ($file =~ m,^usr/share/applications/, and defined $vals{'MimeType'}) {
         unless(defined $vals{'Exec'}
-            and $vals{'Exec'} =~ m,(?:^|[^%])%[fFuU]/,){
+            and $vals{'Exec'} =~ m,(?:^|[^%])%[fFuU],){
             tag 'desktop-mime-but-no-exec-code', $file;
         }
     }
