@@ -1,0 +1,6 @@
+all: pargs
+	pod2man --section=1 pargs pargs.1
+
+clean:
+	rm -f pargs*.1
+
