@@ -1,1 +1,0 @@
-foo.desktop usr/share/applications
