@@ -1,0 +1,2 @@
+*.desktop usr/share/applications
+pargs usr/bin
