@@ -3,6 +3,6 @@ Sequence: 6000
 Version: 1.0
 Section: doc
 Description: Check mime-related issues in desktop files
-References: Debian Bug#488832, Debian Bug#525133, #757383
+References: Debian Bug#488832, Debian Bug#525133, #757383, #760677
 Test-For:
  desktop-mime-but-no-exec-code
