@@ -3,7 +3,10 @@ lintian (2.5.27) UNRELEASED; urgency=medium
   XXX: generate tag summary with private/generate-tag-summary
 
   * checks/cruft.pm:
-    + [BR] Fix a few false positive is for javascript source-is-missing.
+    + [BR] Fix a few false positives is for javascript source-is-missing.
+  * checks/menu-format.pm:
+    + [BR] Fix a false positive in desktop-mime-but-no-exec-code.
+      (Closes: #760677).
   * checks/source-copyright.pm:
     + [BR] Fix False positive for space-in-std-shortname-in-dep5-copyright
       with alternative licenses.  (Closes: #760642).
